# reward-stack-rl

./: .gitignore  LICENSE  README.md  RESEARCH.md  RESULTS.md  pyproject.toml  requirements.txt
docs/: GAMES.md  architecture.excalidraw  architecture.mmd
experiments/: exp_evolve.py  exp_gridworld.py  exp_prisoners.py  exp_tug.py  run_all.py
integrations/: README.md
integrations/craftax/: README.md  drive_bridge.py  requirements.txt
integrations/nmmo/: README.md  drive_bridge.py  economy.py  requirements.txt
posteco/: README.md  __init__.py  economy.py
posteco/experiments/: exp_automation_sweep.py  exp_charter_threshold.py  exp_fear_vs_vision.py  run_all.py
posteco/results/: automation_sweep.json  charter_threshold.json  fear_vs_vision.json
results/: evolve.json  gridworld.json  prisoners.json  tug.json
rlstack/: __init__.py  agent.py  drives.py  evolution.py  metrics.py  steering.py
rlstack/envs/: __init__.py  gridworld.py  prisoners.py  tug.py
tests/: test_core.py  test_posteco.py
viewer/: app.js  data.js  index.html  live.py  record.py  style.css
